Thu Aug  7 14:16:24 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb, {bcc32,win32}/Makefile.sub (CLEANLIBS, CLEANOBJS):
	  moved clean targets to platfrom makefiles.

Thu Aug  7 05:05:46 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (run_final): runs finalizers with the object terminated.

	* gc.c (rb_gc_call_finalizer_at_exit): ObjectSpace::finalizers needs
	  to scan whole object space, although deprecated.

Wed Aug  6 21:25:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (chain_finalized_object): deletes finalizers to be invoked from
	  finalizer_table.

	* gc.c (rb_gc_call_finalizer_at_exit): warns when could not invoke
	  finalizers.

Wed Aug  6 20:52:09 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_sweep, obj_free, run_final): defer finalizers of IO and
	  Data.  [ruby-dev:35578]

	* gc.c (rb_gc_call_finalizer_at_exit): self-referencing finalizers
	  cannot be invoked.  [ruby-dev:35681]

Wed Aug  6 05:10:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_find_file): reset to real class.

	* io.c (io_reopen): ditto.

Tue Aug  5 16:43:07 2008  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (chdir): handle 5xx errors correctly.
	  backported from trunk.  fixed [ruby-core:18057].

Tue Aug  5 16:33:20 2008  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (disconnect): do not refer SSL::SSLSocket for
	  environments without OpenSSL.  backported from trunk.
	  fixed [ruby-dev:35755].

Tue Aug  5 14:19:22 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_stat_mode): generalized st_mode mask.

Mon Aug  4 16:48:50 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (deferred_nodes, compstmt, arg, fixup_nodes, range_op): fix
	  up fixnum range literal in conditional as automagical line number
	  comparison.  [ruby-core:12124], [ruby-dev:35731]

Mon Aug  4 15:04:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (timeofday): use monotonic clock.  based on a patch