@@ -486,6 +486,14 @@ distclean-local::
 		@$(RM) ext\config.cache $(RBCONFIG:/=\)
 		@$(RM) $(RUBY_INSTALL_NAME).rc $(RUBYW_INSTALL_NAME).rc $(RUBY_SO_NAME).rc
 
+clean-ext distclean-ext realclean-ext::
+		@for /R ext %I in (.) do @if exist %I\Makefile ( \
+		    echo $(@:-ext=)ing %~nI & \
+		    cd %I & \
+		    $(MAKE) $(MFLAGS) $(@:-ext=) & \
+		    cd %CD% \
+		)
+
 update-rubyspec:
 	@echo SPEC_EXISTS=0 > $@.mk
 	@if exist $(srcdir:/=\)\rubyspec\nul echo SPEC_EXISTS=1 >> $@.mk
